--- a/Clock/app/src/main/AndroidManifest.xml
+++ b/Clock/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Clock"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".StopwatchActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <service android:name=".TimerService" />
     </application>
 
 </manifest>
