--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 01 18:31:49 EST 2022
-sdk.dir=/Users/ikobilynch/Library/Android/sdk
+#Fri Dec 02 21:47:24 COT 2022
+sdk.dir=C\:\\Users\\Ikobi\\AppData\\Local\\Android\\Sdk
